# wondermagick

./: BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY_PROPERTIES.md
.github/workflows/: lint.yml  test.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: resize.rs  rotate.rs
fuzz/src/: lib.rs
src/: arg_parse_err.rs  args.rs  decode.rs  encode.rs  error.rs  exif.rs  filename_utils.rs  help.rs  image.rs  init.rs  lib.rs  main.rs  plan.rs
src/arg_parsers/: blur_geometry.rs  colorspace.rs  crop.rs  filename.rs  filter.rs  geometry.rs  geometry_ext.rs  gravity.rs  grayscale_method.rs  identify_format.rs  mod.rs  numbers.rs  quality.rs  resize.rs  rotate.rs  sepia_threshold.rs  unsharp_geometry.rs  unsharpen_geometry.rs
src/arg_parsers/identify_format/: identify_format.rs  mod.rs  parser.rs
src/encoders/: avif.rs  common.rs  gif.rs  jpeg.rs  mod.rs  png.rs  tiff.rs  webp.rs
src/encoders/common/: pixel_format_optimization.rs
src/operations/: auto_orient.rs  blur.rs  combine.rs  composite.rs  crop.rs  flip.rs  grayscale.rs  identify.rs  mod.rs  monochrome.rs  negate.rs  noise.rs  resize.rs  rotate.rs  sepia_tone.rs  unsharp.rs  unsharpen.rs
src/utils/: arbitrary.rs  filename.rs  fraction.rs  mod.rs
tests/: wm_convert_integration_tests.rs
