[package]
name = "wondermagick"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Memory-safe replacement for imagemagick"
repository = "https://github.com/Shnatsel/wondermagick"

[dependencies]
current_platform = "0.2.0"
image = "0.25.4"
pic-scale-safe = "0.1.1"
strum = { version = "0.26.3", features = ["derive"] }
webp = "0.3.0"
mimalloc = { version = "0.1.47", optional = true }

[features]
default = ["hardened_malloc"]
# Use a hardened memory allocator for defense-in-depth against memory corruption:
# https://github.com/microsoft/mimalloc?tab=readme-ov-file#secure-mode
hardened_malloc = ["mimalloc/secure"]
# Enables use of nasm by rav1e for a big performance boost in encoding AVIF.
# Requires nasm to be installed.
asm = ["image/nasm"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
derive-quickcheck-arbitrary = "0.1.3"

# Most of the time is spent in `image` and its dependencies,
# so build it with optimizations in debug mode to get good performance
# while simultaneously having `cargo build` complete quickly for short iteration times
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# we don't need unwinding because we don't ever catch panics
panic = "abort"

[patch.crates-io]
image = {git = "https://github.com/image-rs/image"}
webp = {git = "https://github.com/Shnatsel/webp", branch = "encoder-soundness"}