[package]
name = "wondermagick"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Memory-safe replacement for imagemagick"
repository = "https://github.com/Shnatsel/wondermagick"

[dependencies]
current_platform = "0.2.0"
bytemuck = "1"
image = { version = "0.25.9", default-features = false, features = ["rayon"] }
pic-scale-safe = { version = "0.1.5", features = ["rayon"] }
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.23.0"
webp = "0.3.1"
mimalloc = { version = "0.1.47", optional = true }
jxl-oxide = { version = "0.12.5", features = ["image", "moxcms"], optional = true }
imageproc = "0.25.0"

[features]
default = ["hardened_malloc", "default-formats"]
# Use a hardened memory allocator for defense-in-depth against memory corruption:
# https://github.com/microsoft/mimalloc?tab=readme-ov-file#secure-mode
hardened_malloc = ["mimalloc/secure"]
# Enables use of nasm by rav1e for a big performance boost in encoding AVIF.
# Requires nasm to be installed.
asm = ["image/nasm"]

# Image format features - passed through to the `image` crate
default-formats = ["avif", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"]
avif = ["image/avif"]
bmp = ["image/bmp"]
dds = ["image/dds"]
exr = ["image/exr"]
ff = ["image/ff"]
gif = ["image/gif"]
hdr = ["image/hdr"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png = ["image/png"]
pnm = ["image/pnm"]
qoi = ["image/qoi"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]
jxl = ["dep:jxl-oxide"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
derive-quickcheck-arbitrary = "0.1.3"

# Most of the time is spent in `image` and its dependencies,
# so build it with optimizations in debug mode to get good performance
# while simultaneously having `cargo build` complete quickly for short iteration times
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# we don't need unwinding because we don't ever catch panics
panic = "abort"

[patch.crates-io]
image = {git = "https://github.com/image-rs/image.git"}
