[package]
name = "wondermagick"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Memory-safe replacement for imagemagick"
repository = "https://github.com/Shnatsel/wondermagick"

[dependencies]
current_platform = "0.2.0"
bytemuck = "1"
image = { version = "0.25.9", default-features = false, features = ["rayon"] }
num-traits = "0.2"
pic-scale-safe = { version = "0.1.5", features = ["rayon"] }
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.23.0"
webpx = { version = "0.3.3", default-features = false, optional = true, features = ["encode", "std", "icc"] }
mimalloc = { version = "0.1.47", optional = true }
hayro-jpeg2000 = { version = "0.3.0", optional = true }
image-extras = { version = "0.1.0", optional = true, default-features = false }

[features]
default = ["hardened_malloc", "default-formats"]
# Use a hardened memory allocator for defense-in-depth against memory corruption:
# https://github.com/microsoft/mimalloc?tab=readme-ov-file#secure-mode
hardened_malloc = ["mimalloc/secure"]
# Enables use of nasm by rav1e for a big performance boost in encoding AVIF.
# Requires nasm to be installed.
asm = ["image/nasm"]

# These features enable/disable support for specific image formats at compile time
default-formats = ["avif", "bmp", "exr", "ff", "gif", "hdr", "ico", "jpeg", "jpeg2000", "otb", "pcx", "png", "pnm", "qoi", "sgi", "tga", "tiff", "webp", "xbm", "xpm"]
avif = ["image/avif"]
bmp = ["image/bmp"]
#dds = ["image/dds"] # moved to unreleased image-extras. TODO: re-enable.
exr = ["image/exr"]
ff = ["image/ff"]
gif = ["image/gif"]
hdr = ["image/hdr"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
jpeg2000 = ["dep:hayro-jpeg2000"]
otb = ["image-extras/otb"]
pcx = ["image-extras/pcx"]
png = ["image/png"]
pnm = ["image/pnm"]
qoi = ["image/qoi"]
sgi = ["image-extras/sgi"]
tga = ["image/tga"]
tiff = ["image/tiff"]
wbmp = ["image-extras/wbmp"]
webp = ["image/webp", "webpx"]
xbm = ["image-extras/xbm"]
xpm = ["image-extras/xpm"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
derive-quickcheck-arbitrary = "0.1.3"

# Most of the time is spent in `image` and its dependencies,
# so build it with optimizations in debug mode to get good performance
# while simultaneously having `cargo build` complete quickly for short iteration times
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# we don't need unwinding because we don't ever catch panics
panic = "abort"

[patch.crates-io]
image = {git = "https://github.com/image-rs/image.git", rev = "dbb885ce3641b714a3d0284a411f10a6fdcebaeb"}
